package cn.yefan.thrift.service.impl;import cn.yefan.thrift.iface.*;import cn.yefan.thrift.service.HelloWorldService;import org.apache.thrift.TException;/** * @author yefan * @date 2018/01/07 */public class HelloWorldServiceImpl implements HelloWorldService.Iface {    @Override    public Reponse send(Request request) throws ServiceException, TException {        String json = request.getParamJSON();        String serviceName = request.getServiceName();        System.out.println("得到的json：" + json + " ；得到的serviceName: " + serviceName);        Reponse reponse = new Reponse();        reponse.setResponeCode(RESCODE._200);        reponse.setResponseJSON("{\"user\":\"admin\"}");        return reponse;    }}